# audit-mvp

./: .gitignore  README.md  nusantara_coa_mapping.xlsx  nusantara_digit.xlsx  nusantara_infra.xlsx  start.py  telco_holding_audit_mvp_ledger.xlsx
backend/: pyproject.toml
backend/app/: main.py
backend/app/routers/: consolidate.py  demo.py  reports.py  upload.py
backend/app/services/: audit_rules.py  consolidation.py  financial_statements.py  parser.py  storage.py  workpapers.py
docs/: audit_mvp_requirements.md  audit_rules.md  technical_requirements.md
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/consolidate/: page.tsx
frontend/src/app/dashboard/[sessionId]/: layout.tsx  page.tsx
frontend/src/app/dashboard/[sessionId]/accounts/: page.tsx
frontend/src/app/dashboard/[sessionId]/financial-statements/: page.tsx
frontend/src/app/dashboard/[sessionId]/findings/: page.tsx
frontend/src/app/dashboard/[sessionId]/workpapers/: page.tsx
frontend/src/components/: balance-sheet-table.tsx  findings-table.tsx  metric-card.tsx  pl-table.tsx  sidebar.tsx  trial-balance-table.tsx  workpaper-document.tsx
frontend/src/lib/: api.ts  format.ts
