[project]
name = "audit-mvp-backend"
version = "0.1.0"
description = "Audit MVP Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
]

[tool.uv]
package = false